# wayland-protocols-async

./: Cargo.toml  LICENSE  README.md
examples/: idle_notify.rs  input_method.rs  output.rs  screencopy.rs  session_lock.rs  toplevel.rs  virtual_keyboard.rs
src/: lib.rs
src/ext_idle_notify_v1/: handler.rs
src/ext_session_lock_v1/: errors.rs  handler.rs
src/zwlr_foreign_toplevel_management_v1/: handler.rs
src/zwlr_output_management_v1/: errors.rs  handler.rs  mod.rs
src/zwlr_output_management_v1/output/: mod.rs  output_configuration.rs  output_configuration_head.rs  output_head.rs  output_manager.rs  output_mode.rs
src/zwlr_screencopy_v1/: errors.rs  handler.rs  mod.rs
src/zwp_input_method_v2/: handler.rs
src/zwp_virtual_keyboard_v1/: handler.rs  keymap.rs  mod.rs
wlr-foreign-toplevel-async/: Cargo.toml
wlr-foreign-toplevel-async/examples/: basic.rs
wlr-foreign-toplevel-async/src/: errors.rs  handler.rs
zwlr-foreign-toplevel-v1-async/: Cargo.toml
zwlr-foreign-toplevel-v1-async/examples/: basic.rs
zwlr-foreign-toplevel-v1-async/src/: handler.rs
zwp-input-method-v2-async/: Cargo.toml
zwp-input-method-v2-async/examples/: basic.rs
zwp-input-method-v2-async/src/: handler.rs
