[workspace]
resolver = "2"
default-members = []
members = ["wlr-foreign-toplevel-async"]

[workspace.package]
version = "1.0.0"
authors = ["Shoaib Merchant <shoaibm@mechasystems.com>"]
description = "Wayland client protocols implemented in async as handlers using the Actor-model and tokio messaging"
documentation = "https://docs.mecha.so"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/wayland-async"
homepage = "https://mecha.so"
