[package]
name = "wayland-protocols-async"
resolver = "2"
version = "0.1.0"
authors = ["Shoaib Merchant <shoaibm@mechasystems.com>"]
description = "Wayland client protocols implemented in async as handlers using the Actor-model and tokio messaging"
documentation = "https://github.com/mecha-org/wayland-async"
edition = "2021"
license = "MIT"
repository = "https://github.com/mecha-org/wayland-async"
homepage = "https://mecha.so"

[dependencies]
slotmap = "1.0.7"
tokio = { version="1.35.1", features=["time", "net", "process", "sync", "rt-multi-thread", "macros"] }
wayland-client = "0.30.1"
wayland-protocols = { version="0.30.0", features=["client", "staging"] }
wayland-protocols-wlr = { version="0.1.0", features=["client"]}
wayland-protocols-misc = { version="0.1.0", features=["client"]}
shmemfdrs = { git="https://codeberg.org/valpackett/shmemfdrs.git", rev="29eedf374552fad41b71a0d4d1a9a18716d5e176" }
image = { version="0.24.7", features=["png"] }
memmap2 = "0.9.3"
