[package]
name = "zwp-input-method-v2-async"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.1"
num-traits = "0.2.17"
slotmap = "1.0.7"
tokio = { version="1.35.1", features=["time", "net", "process", "sync", "rt-multi-thread", "macros"] }
wayland-client = "0.31.1"
wayland-protocols-misc = { version = "0.2.0", features = ["client"] }
